using cloneNode to avoid layout shift when element gets taken out of doc flow

--- a/intersection-observer/scss/styles.scss
+++ b/intersection-observer/scss/styles.scss
@@ -36,8 +36,17 @@
 .nav-wrapper {
   
   &.sticky {
+    display: block;
     position: fixed;
     top: 0;
     width: 100%;
+
+    .banner02 {
+      height: 80px;
+    }
   }
+}
+
+.cloned {
+  display: none;
 }
